--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,34 +5,27 @@ html(lang="en" dir="ltr")
     meta(http-equiv='x-ua-compatible', content='ie=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title Portfolio Site
-    link(href='https://fonts.googleapis.com/css?family=Merriweather:300,400,400i,700,800', rel='stylesheet')
     link(rel='stylesheet', href='/static/css/normalize.css')
     link(rel='stylesheet', href='/static/css/styles.css')
 
-  body
+  body(onload=`changeDisplayStyle('${displayStyle}')`)
     #my-info.sidebar
       .sidebar-info-box
         br
         .thumbnail-box
-          img.thumbnail(src='https://placehold.it/550x350', alt='')
+          img.thumbnail(src='/static/img/profile.jpg', alt='Profile image of Harrison Peace')
         .dev-intro-box
-
-          //- Replace with your name
-          h5 Name
-
-          //- Replace with description of who you are, what you do, and why you are so awesome
-          p Description
-
-          //- Add path from your '/about' route handler to the href below
-          a(href='') Learn More &rarr;
+          h5 Harrison Peace
+          p DEVELOPER | RESTAURATEUR | EXPLORER
+          a(href='/about') Learn More &rarr;
+          form#display-style-form(action=`${styleDisplayLocation}` method="post")
+            button#display-style-button(type="submit" name="displayStyleButton")
 
     .wrapper
       .header
         .header-info-box
           button#menu-icon.menu-icon(type='button' data-toggle='my-info')
-
-          //- Replace with your name — this is for the mobile layout
-          span Name
+          span Harrison Peace
 
       block content
 
