--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bitter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+/*==========================================================================
+-------------------------------     Colors   -------------------------------
+============================================================================*/
+
+:root {
+  --color-main-light-sidebar: #fefefe;
+  --color-main-dark-sidebar: #0a0a0a;
+  --bg-color-button-sidebar: #333;
+	--text-color-p-sidebar: #666;
+	--text-color-a-sidebar: #555;
+  --text-color-light-grey-sidebar: #a7a7a7;
+}
 
 /*
   Main styles
@@ -9,34 +23,39 @@
 html,
 body {
   font-size: 100%;
-  width: 100%;
-  min-width: 100%;
-  height: 100%;
-  min-height: 100%;
+  min-width: 100vw;
+  min-height: 100vh;
 }
 
 body {
+  width: 100%;
+  height: 100%;
   position: relative;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: 'Bitter', serif;
   font-weight: normal;
   line-height: 1.5;
-  color: #0a0a0a;
-  background: #fefefe;
-  background: #000;
+  color: var(--color-main-dark);
   transform: translateX(0px);
   transition: all 0.4s ease-out;
 }
 
 article {
-  background: #fefefe;
+  background-color: var(--color-main-light);
 }
 
-h1,h2,h3,h4,h5,p{
-  font-family: 'Merriweather', serif;
+h1{
+  font-family: 'Bebas Neue', cursive;
+}
+
+h2,h3,h4,h5{
+  font-family: 'Montserrat', sans-serif;
+}
+
+p{
+  font-family: 'Bitter', serif;
 }
 
 h5{
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   letter-spacing: 2.5px;
   -webkit-text-transform: uppercase;
   text-transform: uppercase;
@@ -51,7 +70,7 @@ h6{
 
 p{
   font-size: 15px;
-  color: #666;
+  color: var(--text-color-p);
 }
 
 a {
@@ -62,8 +81,8 @@ a {
   width: 100%;
   min-width: 320px;
   height: 100%;
-  min-height: 100%;
-  background: #fefefe;
+  min-height: 100vh;
+  background-color: var(--color-main-light);
 }
 
 .flex-row-wrap {
@@ -81,9 +100,9 @@ a {
 .box {
   width: 100%;
   max-width: 1200px;
-  padding: 40px 50px 30px;
-  background: #fefefe;
-  border-bottom: 1px solid #eaeaea;
+  padding: 20px 50px 30px;
+  background-color: var(--color-main-light);
+  border-bottom: 1px solid var(--color-main-light);
 }
 
 .box h1,
@@ -101,6 +120,19 @@ a {
   font-size: 13px;
 }
 
+.error-container h1 {
+  font-size:  3.5em;
+  letter-spacing: 2px;
+  margin-bottom: 0px;
+}
+
+.error-container p {
+  font-size:  1em;
+  letter-spacing: 2px;
+}
+
+
+
 
 /*
   Sidebar and mobile header
@@ -108,18 +140,17 @@ a {
 nav {
   width: 100%;
   padding: 20px;
-  border-bottom: 1px solid #eaeaea;
 }
 
 nav a {
+  font-family: 'Montserrat', sans-serif;
   width: 100%;
   vertical-align: middle;
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 600;
   font-size: 13px;
   letter-spacing: 2.5px;
   text-transform: uppercase;
-  color: #555; 
+  color: var(--text-color-a-sidebar); 
 }
 
 nav a span {
@@ -135,9 +166,9 @@ nav a span {
   min-width: 300px;
   max-width: 300px;
   height: 100%;
-  min-height: 100%;
+  min-height: 100vh;
   padding: 20px;
-  background: #000;
+  background: var(--color-main-dark-sidebar);
 }
 
 .sidebar-info-box {
@@ -151,7 +182,7 @@ nav a span {
 .sidebar .thumbnail {
   width: 100%;
   max-width: 250px;
-  border: 4px solid #fff;
+  border: 4px solid var(--color-main-light-sidebar);
 }
 
 .dev-intro-box {
@@ -159,7 +190,7 @@ nav a span {
 }
 
 .sidebar h5 {
-  color: #fefefe;
+  color: var(--color-main-light-sidebar);
   margin: 0 auto 0.5rem;
 }
 
@@ -167,7 +198,7 @@ nav a span {
   text-rendering: optimizeLegibility;
   line-height: 1.6;
   font-size: 14px;
-  color: #999
+  color: var(--text-color-light-grey-sidebar)
 }
 
 .sidebar a {
@@ -176,16 +207,16 @@ nav a span {
   font-size: 13px;
   letter-spacing: 2.5px;
   text-transform: uppercase;
-  color: #555;
+  color: var(--text-color-a-sidebar);
 }
 
 .header {
   vertical-align: middle;
-  color: #fefefe;
+  color:var(--color-main-light-sidebar);
   height: 40px;
   padding: 0.5rem;
-  background: #0a0a0a;
-  border-left: 1px solid #0a0a0a;
+  background: var(--color-main-dark-sidebar);
+  border-left: 1px solid var(--bg-color-dark-sidebar);
 }
 
 .header span {
@@ -193,19 +224,29 @@ nav a span {
   font-weight: bold;
 }
 
-.header button {
-  vertical-align: top;
+.sidebar button {
+  color: var(--color-main-light-sidebar);
+  margin-top: 20px;
+  padding: 5px 0;
+}
+
+.header button,
+.sidebar button {
   cursor: pointer;
   outline: none;
+  border: none;
+  background: var(--color-main-dark-sidebar);
+  border-top: 2px solid var(--color-main-light-sidebar);
+  border-bottom: 2px solid var(--color-main-light-sidebar);
+}
+
+.header button {
+  vertical-align: top;
   position: relative;
   width: 20px;
   height: 16px;
-  border: none;
-  background: #0a0a0a;
   margin-top: 3px;
   margin-right: 10px;
-  border-top: 2px solid #fefefe;
-  border-bottom: 2px solid #fefefe;
 }
 
 .header button:after {
@@ -215,21 +256,22 @@ nav a span {
   left: 0;
   width: 20px;
   height: 2px;
-  background: #fefefe;
+  background: var(---color-main-light-sidebar);
 }
 
 
 /*
   Home page styles
 */
-.portfolio-intro {
+.portfolio-intro,
+.error-container {
   max-width: 1200px;
   padding: 40px 50px 30px;
 }
 
 .portfolio-intro h1 {
   font-size: 1.5rem;
-  color: #0a0a0a;
+  color: var(--color-main-dark);
   margin: 0 auto 8px;
 }
 
@@ -237,17 +279,24 @@ nav a span {
   text-rendering: optimizeLegibility;
   font-size: 125%;
   margin: 0 auto;
-  padding-bottom: 40px;
-  border-bottom: 1px solid #eaeaea;
+  padding-bottom: 6px;
+  border-bottom: 1px solid var(--color-main-light);
+}
+
+.portfolio-intro a {
+  color:var(--text-color-a)
+}
+
+.portfolio-intro p:nth-child(2) {
+  margin-bottom: 30px;
 }
 
 .projects-box h5 {
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 13px;
   letter-spacing: 2.25px;
   text-transform: uppercase;
-  color: #222;;
+  color: var(--color-main-dark);
   margin: 0 auto 8px;
 }
 
@@ -258,8 +307,8 @@ nav a span {
 .cell img {
   width: 100%;
   min-width: 100px;
-  border: 4px solid #fff;
-  box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
+  -webkit-box-shadow: 1px 4px 13px 0px var(--color-box-shadow); 
+  box-shadow: 1px 4px 13px 0px var(--color-box-shadow);
 }
 
 
@@ -273,7 +322,7 @@ nav a span {
 
 .about-bio p {
   font-size: 15px;
-  padding-top: 40px;
+  padding-top: 15px;
 }
 
 .skills-contact-box ul {
@@ -284,19 +333,18 @@ nav a span {
   width: 100%;
   max-width: 1065px;
   margin-bottom: 15px;
-  border: 4px solid #fff;
-  box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
+  border: 4px solid var(--color-main-light);
 }
 
 .btn-link {
   display: block;
   text-align: center;
-  color: #fefefe;
+  color: var(--color-main-light);
   width: 100%;
   max-width: 255px;
   margin: auto 0 5px 0;
   padding: 0.85em 1em;
-  background-color: #333;
+  background-color: var(--bg-color-button);
   border: 1px solid transparent;
 }
 
@@ -305,6 +353,15 @@ nav a span {
   Tablet layout styles 
 */
 @media screen and (min-width: 768px) {
+  .project-img {
+    width: 49%;
+    transition: transform ease-in-out .15s;
+  }
+
+  .project-img:hover {
+    transform: scale(1.3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  }
+
   .sidebar h5 {
     font-size: 1.25rem;
   }
