--- a/views/about.pug
+++ b/views/about.pug
@@ -10,24 +10,13 @@ block content
   article.portfolio-about
     .inner-wrapper.flex-row-wrap.two-col
       .about-intro-box.box
-
-        //- Replace with your name
-        h1 Name
-
-        //- Feel free to personalize the title below
+        h1 Harrison Peace
         p Full Stack JavaScript Developer
-
-
         .about-bio
-
-          //- Replace the boilerplate below with your best elevator pitch
-          p This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
-
+          p A (Junior) Full Stack Developer with 12 months of study in HTML, CSS, JavaScript, Bootstrap, React, Node.js and Express. 5 years’ experience in hospitality and retail management, with 2 of those managing my own businesses. 1-year experience in managing an online store (shopify). <br><br> I am currently seeking any opportunities, in a junior development role and can be reached here on LinkedIn or at mrpeace@harrisonpeace.com
 
       .skills-contact-box.box
         h6 Skills
-
-        //- Replace skills below with your own skills — at this point, you should be able to list as many as ten skills
         ul
           li HTML
           li CSS
@@ -40,18 +29,14 @@ block content
           li Node.js
           li Express
           li Pug
+          li basic adobe suite
 
         h6 Contact Info
-
-        //- Replace with your own contact info - feel free to use fake information if you prefer
         ul
-          li 555-555-1234
-          li email@email.com
+          li mrpeace@harrisonpeace.com
 
-        //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
-        a.btn-link(href='') LinkedIn
-        a.btn-link(href='') GitHub
-        a.btn-link(href='') Twitter
+        a.btn-link(href='https://www.linkedin.com/in/harrison-peace') LinkedIn
+        a.btn-link(href='https://github.com/HarrisonPeace') GitHub
 
     nav.nav
       a(href='/')
